<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorFull</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="use_camera">Use Camera</string>
    <string name="view_photo">View Photo</string>
    <string name="cloud_photos">Cloud Photos</string>
    <string name="online_gallery">Online Gallery</string>
    <string name="register_and_log_in">Register &amp; Log in</string>
    <string name="logout">Logout</string>
    <string name="title_activity_camera">Camera Preview</string>
    <string name="title_activity_view_photo">View Photo</string>
    <string name="title_activity_cloud_photos">Cloud Photos</string>
    <string name="title_activity_online_gallery">Online Gallery</string>
    <string name="title_activity_view_server_photos">Server Photos</string>
    <string name="title_activity_item_selected">Selected Photo</string>

</resources>
